Update audio source path in index.html

--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@
 <body>
 
     <audio controls autoplay loop>
-        <source src="/Users/davidb/Documents/SITIO WEB/img/cancion.wav" type="audio/mpeg">
+        <source src="img/cancion.mp3" type="audio/mpeg">
     </audio>
 
     <div class="paper">
