--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@
 <body>
 
     <audio controls autoplay loop>
-        <source src="img/cancion.mp3" type="audio/mpeg">
+        <source src="cancion.mp3" type="audio/mpeg">
     </audio>
 
     <div class="paper">
